nats-micro/tests/ui/service_error_invalid_kind_whitespace.rs
use nats_micro::service_error;

#[service_error]
pub enum DemoError {
    #[kind("BAD KIND")]
    #[error("bad")]
    Bad,
}

fn main() {}
